FIX: Missing border with grid

--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@
 .topics > * {
 	background: #164e14;
     color: white;
-    xborder: .5em solid #164e14;
+    border: .5em solid #164e14;
 }
 
 
